commit tree 693c439c3e7c63156c5e60b8af579340865d08a6

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,15 @@
 <h1>Songs#show</h1>
 
-Title: <%= @song.title %>
+<ul>
+  <li>Title: <%= @song.title %></li>
+  <li>Artist: <%= @song.artist_name%></li>
+  <li>Genre: <%= @song.genre_name%></li>
+  <li>Notes: 
+    <ul>
+      <% @song.notes.each do |note| %>
+      <li>
+        <%=note.content%>
+      </li>
+      <%end%>
+    </ul>
+</ul>
