--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,7 +4,25 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name%>
+  <%= f.text_field :artist_name%>
+  <br>
+  <%# <%= f.text_field :song_genre_id, list: "genre_autocomplete" %> 
+    <%# <datalist id="genre_autocomplete"> %>
+      <%# <% Genre.all.each do |genre|%> 
+        <%# <option value="<%=genre.name%>
+      <%# <%end%>
+    <%# </datalist> %>
+  <br>
 
+  <hr>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <hr>
+  <input name="song[note_contents][]" id="song_notes_1">
+  <input name="song[note_contents][]" id="song_notes_2">
+  <input name="song[note_contents][]" id="song_notes_3">
+
+  
   <%= f.submit %>
 <% end %>
 
